# c-json-parser

./: .clang-format  .gitignore  README.md  SECURITY.md  TODO.md  URUKHAI.md  analysis.md  build-c-json-parser.ps1  build-c-json-parser.sh  build-json-c.sh  build-simdjson.sh  build-ultra-c-json-parser.sh  build-ultra.ninja  build.exjson.ninja  build.linux.ninja  build.linux.test_equal.ninja  build.osx.ninja  build.sh  build.windows.ninja  build_test_equal.sh  call_graph.md  call_graph.mmd  classDiagram.mmd  cleanup.ps1  cleanup.sh  coverage.sh  debug.entitlements  debug_rust_network.sh  func.c  gprof.sh  graph TD.mmd  install_rust.sh  main.c  opencode.json  perf-gprof.txt  perf-long.sh  perf-ultra.sh  perf.ps1  perf.sh  perf_profile.sh  (+4 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
data/: array.json  object.json  test.json
docs/: 01-nextdocs-pages.md  ACCESSING-DOCUMENTATION.md  README.md  data-structures.md  nextdocs-ai-pages.md
perf/: test_c_json_parser.c  test_json_c.c  test_perf.c  test_simdjson.cpp
python/: extract_audio_ffmpeg.ipynb
rust-urukhai/: Cargo.toml
rust-urukhai/urukhai/: Cargo.toml
rust-urukhai/urukhai-server/: Cargo.toml
rust-urukhai/urukhai-server/src/: main.rs
rust-urukhai/urukhai/src/: lib.rs
src/: .clang-tidy  EXJSON_README.md  exjson.c  exjson.h  exjson_additions.c  func.c  headers.h  hex_lookup.asm  hex_lookup.c  json.c  json.h  json.h.pch  json_array_node_pool.asm  json_object_node_pool.asm  macros.h  main.c  test_exjson.c  test_simple.c  whitespace_lookup.asm  whitespace_lookup.c
test/: main.c  test.c  (+23 more)
(+16 files in other folders)
