[package]
name = "urukhai-server"
version = "0.1.0"
edition = "2021"

[dependencies]
urukhai = { path = "../urukhai" }
tokio = { version = "1.38.1", features = ["full"] }
clap = { version = "4.5.9", features = ["derive"] }
thiserror = "1.0.63"
anyhow = "1.0.86"
log = "0.4.22"
env_logger = "0.11.4"
crc32fast = "1.4.0"
