[package]
name = "urukhai"
version = "0.1.0"
edition = "2021"

[dependencies]
crc32fast = "1.4.0"
sha1 = "0.10.6"
aes-gcm = "0.10.3"
thiserror = "1.0.63"
rand = "0.8.5"
memmap2 = "0.9.4"
lz4_flex = "0.11.3"
zstd = "0.13.1"
tokio = { version = "1.38.1", features = ["full"] }
bytes = "1.6.1"
anyhow = "1.0.86"
log = "0.4.22"
bidiff = "1.0.0"
vcdiff = "0.1.0"

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
